--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
+    "openai": "^5.12.2",
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0"
